fix: to carousel white space and time between reviews displayed

--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -44,7 +44,7 @@
   justify-content: center;
   width: 100%;
   padding: 0;
-  margin-top: 7.1em;
+  margin-top: 9em;
   background-color: #272727;
 }
 
